tests/samples/invalid/unfinished_function_signature.pn

fn foo(

import "bar.pn";

fn use_bar(bar: Bar);
